# linovel_scrapy

./: .dockerignore  .env.example  .gitignore  .uvignore  Dockerfile  README.md  check_data.py  check_redis.py  check_status.py  crawler_stats.py  docker-compose.yml  fix_database.py  main.sh  pyproject.toml  require.md  requirements.txt  reset_data.py  run_spiders.py  scrapy.cfg
linovel_crawler/: comment_parser.py  items.py  middlewares.py  pipelines.py  settings.py  state_store.py
linovel_crawler/spiders/: novel_comment.py  novel_detail.py  novel_list.py
storage/: comment.json  detail.html  list1.html
