[project]
name = "linovel-crawler"
version = "2.0.0"
description = "基于Scrapy的小说网站爬虫，支持异步爬取、断点续爬和数据持久化"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "scrapy>=2.8.0",
    "pymysql>=1.0.2",
    "redis>=4.5.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
